[project]
name = "starlette-rfc7807"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.46.0,<=1.0",
]
packages = ["starlette_rfc7807"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"